# sllabres.acceleratedcpp

./: .gitignore  CMakeLists.txt  README.md  UpgradeLog.htm  sllabres.acceleratedcpp.sln
Backup/: sllabres.acceleratedcpp.sln
Debug/: chapterone.ilk  chapterone.tests.ilk  googletest.lib
chapterone/: ReadMe.txt  chapterone.cpp  chapterone.vcproj  chapterone.vcxproj  chapterone.vcxproj.filters  stdafx.cpp
chapterone.tests/: ReadMe.txt  chapterone.tests.cpp  chapterone.tests.vcproj  chapterone.tests.vcxproj  chapterone.tests.vcxproj.filters  stdafx.cpp
chapterone.tests/Debug/: BuildLog.htm  mt.dep  vc90.idb
chapterone/Debug/: BuildLog.htm  mt.dep  vc90.idb
chaptertwo/: ReadMe.txt  chaptertwo.vcxproj  chaptertwo.vcxproj.filters  stdafx.cpp
googletest/: ReadMe.txt  googletest.ncb  googletest.sln  googletest.vcproj  googletest.vcxproj  googletest.vcxproj.filters
googletest/Debug/: BuildLog.htm  vc90.idb
gtest-1.7.0/src/: gtest_main.cc
libs/gtest/make/: sample1_unittest
libs/gtest/xcode/: CMakeCache.txt  cmake_install.cmake
libs/gtest/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  (+2 more)
src/: FirstTest.cpp
xcode/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
xcode/AcceleratedCPP.xcodeproj/: project.pbxproj
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  AcceleratedCPP_postBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
xcode/libs/gtest/: cmake_install.cmake
(+10 files in other folders)
